--- a/qllichtruc.html
+++ b/qllichtruc.html
@@ -166,7 +166,7 @@
   <div class="">
     <!-- Bordered Tabs -->
     
-    <div class="tab-content pt-4" id="borderedTabContent">
+    <div class="tab-content" id="borderedTabContent">
       <!-- TAB1 -->
       <div class="tab-pane fade show active" id="bordered-contact" role="tabpanel" aria-labelledby="contact-tab">
         <section class="section faq">
@@ -176,24 +176,24 @@
                 <div class="card-body">
                   <div class="row justify-content-center m-3">
                     <div class="row col-md-6 col-lg-4 d-flex">
-                      <div class="col-6">
-                        <label class=" col-form-label"><b>Ngày bắt đầu</b></label>
+                      <div class="col-6 mx-2">
+                        <label class="col-form-label" style="box-sizing: none;"><b>Ngày bắt đầu</b></label>
                       </div>
                       <div class="col-6" style="margin-left: -50px;">
                         <div class="ms-3">
-                          <input type="date" class="form-control" id="inputStartDate" value="2024-05-02">
+                          <input type="date" class="form-control" id="inputStartDate" value="" style="width: 150%;">
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="row justify-content-center m-3">
                     <div class="row col-md-6 col-lg-4 d-flex">
-                      <div class="col-6">
-                        <label class=" col-form-label"><b>Ngày kết thúc</b></label>
+                      <div class="col-6 mx-2" >
+                        <label class=" col-form-label" ><b>Ngày kết thúc</b></label>
                       </div>
                       <div class="col-6" style="margin-left: -50px;">
                         <div class="ms-3">
-                          <input type="date" class="form-control" id="inputEndDate" value="2024-05-22">
+                          <input type="date" class="form-control" id="inputEndDate" value="" style="width: 150%;">
                         </div>
                       </div>
                     </div>
