--- a/DiemDanh.html
+++ b/DiemDanh.html
@@ -117,7 +117,7 @@
                                         <button id="addChamCong" class="btn btn-outline-primary mb-2" style="height: 40px;"
                                             data-bs-toggle="modal" data-bs-target="#addChamCongModal">+ CheckIn</button>
                                         <button id="addCheckout" class="btn btn-outline-danger mb-2 me-3" style="height: 40px;"
-                                            data-bs-toggle="modal" data-bs-target="#modalCheckout">Checkout</button>
+                                            data-bs-toggle="modal" data-bs-target="#addChamCongModal">Checkout</button>
                                     </div>
                                 </div>
 
