--- a/QLToChuc.html
+++ b/QLToChuc.html
@@ -191,7 +191,7 @@
                   </svg>
                   Thêm nhóm quản trị mới
                 </button>
-                <table class="table table-borderless datatable list-nhomQuyen">
+                <table class="table table-borderless  list-nhomQuyen">
                   <thead>
                     <tr>
                       <th scope="col">ID</th>
@@ -241,10 +241,10 @@
             <!-- Modal body -->
             <div class="modal-body">
               <form class="form-inline">
-                <div class="form-group mx-sm-3 mb-2">
+                <!-- <div class="form-group mx-sm-3 mb-2">
                   <label for="maNhomQuyen" class="sr-only">ID</label>
                   <input type="text" class="form-control" id="maNhomQuyen" />
-                </div>
+                </div> -->
                 <div class="form-group mx-sm-3 mb-2">
                   <label for="tenNhomQuyen" class="sr-only"
                     >Tên nhóm quản trị</label
@@ -271,7 +271,7 @@
                 </div>
               </form>
               <div class="card-body">
-                <h4>Quyền truy cập</h4>
+                <!-- <h4>Quyền truy cập</h4>
                 <div class="container mt-3">
                   <div class="row">
                     <div class="col-sm-4">
@@ -570,7 +570,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -655,7 +655,7 @@
                 </div>
               </form>
               <div class="card-body">
-                <h4>Quyền truy cập</h4>
+                <!-- <h4>Quyền truy cập</h4>
                 <div class="container mt-3">
                   <div class="row">
                     <div class="col-sm-4">
@@ -954,7 +954,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
 
