--- a/QLLuongThuongThue.html
+++ b/QLLuongThuongThue.html
@@ -507,6 +507,18 @@
                                 <input type="text" class="form-control" id="chucvu1">
                             </div>
                             <div class="form-group mx-sm-3 mb-2">
+							  <label for="moTa1" class="sr-only">Mô tả</label>
+							  <input type="text" class="form-control" id="moTa1" />
+							</div>
+							<div class="form-group mx-sm-3 mb-2">
+							  <label for="thanhVienNhom1" class="sr-only">Số lượng thành viên</label>
+							  <input
+								type="text"
+								class="form-control"
+								id="thanhVienNhom1"
+							  />
+							</div>
+                            <div class="form-group mx-sm-3 mb-2">
                                 <label for="heso1" class="sr-only">Hệ số</label>
                                 <input type="text" class="form-control" id="heso1">
                             </div>
